--- a/starter_code/index.html
+++ b/starter_code/index.html
@@ -7,18 +7,24 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="https://use.fontawesome.com/1fb0eb3889.js"></script>
   <title>Where work happens | Slack</title>
+  <link rel="stylesheet" type="text/css" href="C:\Users\Next Level Shit\Documents\Dev\Ironhack-exercises\lab-css-flexbox-slack\starter_code\stylesheets\style.css">
 </head>
 
 <body>
-  <nav>
-    <img src="./images/slack-logo.png" alt="slack_logo">
+  <div class="flex-container">
+  <div class="nav">
+    <div class="logo"> <img src="./images/slack-logo.png" alt="slack_logo"> </div>
+    <div class="hamburger-menu">
     <ul>
       <li>Why Slack?</li>
       <li>Pricing</li>
       <li>About Us</li>
       <li>Your Workspaces</li>
     </ul>
-  </nav>
+  </div>
+  </div>
+
+<div class="headersection">
   <header>
     <img src="./images/home_talking.png" alt="home_work_happening">
     <h1>Where Work Happens</h1>
@@ -26,6 +32,9 @@
     <button type="button" name="button">GET STARTED</button>
     <p>Already using Slack? <a href="#">Sign in</a></p>
   </header>
+</div>
+
+<div class=" mainsection">
   <main>
     <div>
       <h2>You´re in good company</h2>
@@ -44,6 +53,9 @@
       <button type="button" name="button">GET STARTED</button>
     </div>
   </main>
+</div>
+
+<div class="footsection">
   <footer>
     <div>
       <img src="./images/iso-slack.png" alt="">
@@ -96,6 +108,8 @@
       </div>
     </div>
   </footer>
+</div>
+</div>
 </body>
 
 </html>
